# ros2_study

./: .gitignore  README.md  build_camera_3d.sh  building_robot.sdf  docker_run.sh
install/: local_setup.sh  setup.sh
install/my_package/lib/my_package/: cmd_pose  my_action  my_service  pub_node  sub_node  video_person_detection
install/my_package/share/my_package/: package.sh  package.xml
install/my_package/share/my_package/launch/: my_package.launch.py
install/my_package_msgs/include/my_package_msgs/my_package_msgs/action/: dist_turtle.hpp
install/my_package_msgs/include/my_package_msgs/my_package_msgs/action/detail/: dist_turtle__functions.c  dist_turtle__functions.h  dist_turtle__rosidl_typesupport_fastrtps_c.h  dist_turtle__rosidl_typesupport_introspection_c.h  dist_turtle__rosidl_typesupport_introspection_cpp.hpp  dist_turtle__type_support.c
install/my_package_msgs/include/my_package_msgs/my_package_msgs/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
install/my_package_msgs/include/my_package_msgs/my_package_msgs/msg/detail/: cmd_and_pose_vel__functions.c  cmd_and_pose_vel__functions.h  cmd_and_pose_vel__rosidl_typesupport_fastrtps_c.h  cmd_and_pose_vel__rosidl_typesupport_introspection_c.h  cmd_and_pose_vel__rosidl_typesupport_introspection_cpp.hpp  cmd_and_pose_vel__type_support.cpp  cmd_and_pose_vel__type_support.hpp
install/my_package_msgs/include/my_package_msgs/my_package_msgs/srv/detail/: multi_spawn__functions.c  multi_spawn__functions.h  multi_spawn__rosidl_typesupport_fastrtps_c.h  multi_spawn__rosidl_typesupport_fastrtps_cpp.hpp  multi_spawn__rosidl_typesupport_introspection_c.h  (+2 more)
install/my_package_msgs/share/my_package_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_package_msgs/share/my_package_msgs/action/: DistTurtle.idl
install/my_package_msgs/share/my_package_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_my_package_msgs__rosidl_generator_cExport-noconfig.cmake  export_my_package_msgs__rosidl_generator_cppExport.cmake  export_my_package_msgs__rosidl_generator_pyExport.cmake  export_my_package_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_package_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  my_package_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_package_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  my_package_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_package_msgs/share/my_package_msgs/srv/: MultiSpawn.idl
install/yolo_bringup/share/yolo_bringup/: package.bash  package.zsh
install/yolo_msgs/share/ament_index/resource_index/parent_prefix_path/: yolo_msgs
install/yolo_msgs/share/yolo_msgs/: local_setup.sh  package.sh
install/yolo_msgs/share/yolo_msgs/cmake/: yolo_msgsConfig.cmake
log/: latest_build
src/camera_3d_pkg/: README.md  package.xml  setup.cfg  setup.py
src/camera_3d_pkg/camera_3d_pkg/: __init__.py  camera_3d_node.py  pointcloud_node.py
src/camera_3d_pkg/launch/: camera_3d.launch.py  camera_driver.launch.py
src/camera_3d_pkg/srv/: CaptureFrame.srv  ConfigureCamera.srv  GetCameraInfo.srv
src/camera_3d_pkg/test/: test_camera_3d_pkg.py
src/camera_3d_pkg1/: CMakeLists.txt  package.xml
src/my_opencv_pkg/: package.xml  setup.cfg  setup.py
src/my_opencv_pkg/launch/: bringup_usb_cam.launch.xml  my_pkg.launch.py
src/my_opencv_pkg/my_opencv_pkg/: img_pub.py  img_sub.py
src/my_package/: YOLO_DETECTION_README.md  setup.py
src/my_package/my_package/: cmd_pose.py  examples.py  my_node.py
src/my_package/params/: tutle.yaml
src/my_package_msgs/: CMakeLists.txt
src/my_so_arm_gazebo/: .aa.swp  CMakeLists.txt  INSTALL.md  QUICKSTART_FIX.md  README.md  START_HERE.md  aa  package.xml  quickstart.sh  setup_env.sh
src/my_so_arm_gazebo/config/: arm.srdf  controllers.yaml  moveit.rviz  ompl_planning.yaml  visualization.rviz
src/my_so_arm_gazebo/launch/: display.launch.py  gazebo.launch.py  moveit.launch.py
src/my_so_arm_gazebo/my_so_arm_gazebo/: arm_controller.py
src/my_so_arm_gazebo/urdf/: arm.urdf.xacro
src/robot_arm_control/: CMakeLists.txt  MOVEIT2_GUIDE.md  PACKAGE_SUMMARY.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py  test_demo.py
src/robot_arm_control/config/: robot_config.py
src/robot_arm_control/launch/: arm_control_only.launch.py  robot_arm_bringup.launch.py  robot_arm_moveit2.launch.py  task_executor_only.launch.py  vision_only.launch.py
src/robot_arm_control/moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  so_arm101.srdf
src/robot_arm_control/moveit_config/launch/: moveit2_planning_execution.launch.py
src/robot_arm_control/msg/: ArmState.msg  DetectionResult.msg  JointCommand.msg
src/robot_arm_control/resource/: robot_arm_control
src/robot_arm_control/robot_arm_control/: __init__.py  arm_control_node.py  moveit2_example.py  task_executor_node.py  utils.py  vision_node.py
src/robot_arm_control/srv/: GripperCommand.srv  MoveArm.srv
src/robot_arm_control/test/: test_robot_arm_control.py
src/robot_arm_control/urdf/: so_arm101.urdf
src/so_arm101_pkg/: README.md  a  package.xml  setup.cfg  setup.py
src/so_arm101_pkg/launch/: arm_control.launch.py
src/so_arm101_pkg/resource/: so_arm101_pkg
src/so_arm101_pkg/so_arm101_pkg/: __init__.py  arm_controller.py  arm_demo.py  arm_joystick.py  arm_keyboard.py  arm_kinematics.py  arm_serial_comm.py  serial_diagnostic.py
(+14 files in other folders)
