<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_control</name>
  <version>0.0.1</version>
  <description>로봇 암(So-arm101) 제어 패키지 - Vision 기반 작업 수행</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/your-org/robot_arm_control</url>
  <url type="bugtracker">https://github.com/your-org/robot_arm_control/issues</url>
  <author email="user@todo.todo">user</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- MoveIt2 의존성 -->
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
